2007-02-06  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* uni_data.c, uni_norm.c, stringprep_uni_data.h,
	stringprep_uni_norm.h: Renamed as real headers.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Next branch will be 0.7.

2007-01-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Fixed the name of a variable.

2007-01-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Head is now the future 0.6 branch. Dropped
	`EXMPP_BUILD_ID'. Debug is disabled by default when
	`EXMPP_RELEASE_DATE' is set and enabled otherwise. Comments translated
	in english.

	* include/exmpp.hrl: Add `jabber:iq:privacy', `jabber:iq:roster' and
	`urn:ietf:params:xml:ns:xmpp-session' namespaces.

	* doc/Makefile.am: Clean stylesheet.css if it was copied at compile
	time.

	* src/exmpp_factory.erl: Add functions to make common pubsub stanzas.

	* src/exmpp_jlib.erl: Add functions to convert #jid{} to string and
	the other way around. Style.

	* testsuite/test.sh: Fixed portability issues with sed(1) and head(1).

	* c_src/xmpp_ns.h.in, c_src/xmpp_attrs.h.in, c_src/xmpp_names.h.in:
	Added pubsub-related namespaces, element names and attribute names.

	* c_src/Makefile.am: Fixed CPPFLAGS for expat_drv (EXPAT_CPPFLAS was
	missing).

2006-10-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* priv/lib/Makefile.am: Copies of stringprep_drv.so,
	tls_drv.so and iconv_erl.so are useless, because they're not tested by
	the current testsuite.

	* include/exmpp.hrl: Corrections in comments.

	* src/exmpp_jlib.erl, src/jlib.erl, src/Emakefile.ini,
	src/Makefile.am: As we did with `exmpp_xml' and `xml', we split
	`exmpp_jlib' in `exmpp_jlib' and `jlib' to separate the old code with
	the new one. Because this module didn't received a lot of
	modifications and testing, we took this opportunity to import the last
	version of `jlib' from today's ejabberd repository.
